--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "plugin:tailwindcss/recommended"],
+  "plugins": ["prettier"],
+  "ignorePatterns": ["*.config.js"],
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
