--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.16.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.6.5",
@@ -16,12 +17,15 @@
     "@hookform/resolvers": "^2.9.8",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
+    "@mui/x-date-pickers": "^5.0.6",
     "@tailwindcss/forms": "^0.5.2",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "install": "^0.13.0",
-    "next": "12.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "next": "^13.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
     "ress": "^5.0.2",
     "swr": "^1.3.0",
@@ -33,7 +37,7 @@
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^13.0.0",
     "eslint-plugin-tailwindcss": "^3.5.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
